link to jstillery

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Yo
+<!DOCTYPE html>
+<html>
+<head>
+  <title>MindedSecurity - Github</title>
+</head>
+<body>
+<ul>
+  <li>
+    <a href="/jstillery/">JStillery live demo</a><a href="https://github.com/mindedsecurity/JStillery/">Github src</a>
+  </li>
+</ul>
+</body>
+</html>
